# simulador-financeiro

./: LICENSE  README.md  exemplo_consorcio.json  main.py  parcelas_cons.csv  parcelas_fin.csv  pyproject.toml
simulador/: exportador.py  financiamento.py  helpers.py  ipca.py  menu.py  models.py  tr.py
src/simfin/: __init__.py  cli.py  consorcio.py  export.py  indices.py  models.py  sac.py
tests/: test_consorcio.py  test_sac.py
