[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simfin"
version = "1.0.0"
description = "Simulador de financiamento (SAC) com TR/IPCA e exportação CSV — refatorado"
readme = "README.md"
authors = [{name = "Douglas Baldon"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
simfin = "simfin.cli:main"
